# jsonrpc-cpp

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
commons/: CMakeLists.txt  commons.cpp  commons.h  commons_global.h
server/: CMakeLists.txt  main.cpp  stubserver.cpp  stubserver.h
